<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="img_type">
        <item>JPG (Good quality, small file)</item>
        <item>PNG (High quality, big file)</item>
    </string-array>

    <string name="home_title">Design_Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="sys">System</string>
    <string name="about">About us</string>
    <string name="camera">Camera</string>
    <string name="backg">Background</string>
    <string name="template">templates</string>
    <string name="shop">Shop</string>
    <string name="gallery">Gallery</string>
    <string name="frame_title">Frames</string>
    <string name="tools_title">Tools</string>
    <string name="more">More</string>
    <string name="stck_title">Stickers</string>
    <string name="choose_color">Choose color</string>
    <string name="effects_title">Effects</string>
    <string name="text_title">Text</string>
    <string name="shop_title">Shop</string>
    <string name="temp_title">Template</string>
    <string name="editor_title">Editor</string>
    <string name="width">ًWidth</string>
    <string name="height">Height</string>
    <string name="ok">OK</string>
    <string name="reszing_pic">Resizing Picture</string>
    <string name="confirm_close">Confirm Close</string>
    <string name="cancel">Cancel</string>
    <string name="crop">Crop</string>
    <string name="resize">Resize</string>
    <string name="rotate">Rotate</string>
    <string name="flip">Flip</string>
    <string name="title">Tools</string>
    <string name="saving_title">Saving Process</string>
    <string name="not_saved">Failed to save, please try again later!</string>
    <string name="saved">Image has been successfully saved</string>
    <string name="saveprog_title">Perform saving, please wait... </string>
    <string name="stk_title">Stickers</string>
    <string name="dont_show">Do not show again</string>
    <string name="closing_title">Your work was not saved yet. Are you sure you want to close the screen?</string>
    <string name="facebook">Facebook</string>
    <string name="tweeter">Tweeter</string>
    <string name="website">Website</string>
    <string name="google">Google+</string>
    <string name="email">E-mail</string>
    <string name="share">Share</string>
    <string name="rate">Rate us</string>
    <string name="prepare">Preparing application, please wait....</string>
    <string name="home_page">Home page</string>

</resources>