<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/help_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/line_border"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/help_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="7dp"
                android:clickable="false"
                android:src="@drawable/help_btn" />

            <TextView
                android:id="@+id/help_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:clickable="false"
                android:text="@string/help"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/line_border"
            android:clickable="true"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/about_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:clickable="false"
                android:src="@drawable/about_btn" />

            <TextView
                android:id="@+id/about_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:clickable="false"
                android:text="@string/about"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sys_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/line_border"
            android:clickable="true"
            android:visibility="gone"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sys_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:clickable="false"
                android:src="@drawable/sys_btn" />

            <TextView
                android:id="@+id/sys_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:clickable="false"
                android:text="@string/sys"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:background="@drawable/droid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="#2d2d2d" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/line_border" >

                <LinearLayout
                    android:id="@+id/camera_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_border"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/cam_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="21dp"
                        android:clickable="false"
                        android:src="@drawable/camera_btn" />

                    <TextView
                        android:id="@+id/cam_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:clickable="false"
                        android:text="@string/camera"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gallery_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_border"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/gallery_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="21dp"
                        android:clickable="false"
                        android:src="@drawable/gallery_btn" />

                    <TextView
                        android:id="@+id/gallery_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:clickable="false"
                        android:text="@string/gallery"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/line_border" >

                <LinearLayout
                    android:id="@+id/background_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_border"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/background_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:clickable="false"
                        android:src="@drawable/background_btn" />

                    <TextView
                        android:id="@+id/background_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:clickable="false"
                        android:text="@string/backg"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/template_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_border"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/template_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:clickable="false"
                        android:src="@drawable/template_btn" />

                    <TextView
                        android:id="@+id/template_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        
                        android:clickable="false"
                        android:text="@string/temp_title"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </TableRow>
             <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/line_border" >

                <LinearLayout
                    android:id="@+id/shop_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_border"
                    android:clickable="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/shop_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        android:src="@drawable/shop_btn" />

                    <TextView
                        android:id="@+id/shop_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:clickable="false"
                        android:text="@string/shop"
                        android:textColor="#ffffff" />
                </LinearLayout>

            </TableRow>
        </TableLayout>

    </RelativeLayout>

    <!-- <ProgressBar
        android:id="@+id/home_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /> -->

</RelativeLayout>