<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/droid"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="#B3303030" >

        <LinearLayout
            android:id="@+id/C1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <LinearLayout
                android:id="@+id/shareapp_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/line_border"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/shareapp_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/shareapp_btn" />

                <TextView
                    android:id="@+id/shareapp_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/share"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/line_border"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/rate_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/rate_btn" />

                <TextView
                    android:id="@+id/rate_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/rate"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layut2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="50dp"
        android:background="#B3303030"
        android:weightSum="3" >

        <LinearLayout
            android:id="@+id/google_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/line_border"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/google_btn" />

            <TextView
                android:id="@+id/google_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/google"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fb_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/line_border"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fb_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/fb_btn" />

            <TextView
                android:id="@+id/fb_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/facebook"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tweet_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/line_border"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tweet_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/tweeter_btn" />

            <TextView
                android:id="@+id/tweet_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/tweeter"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layut2"
        android:layout_marginTop="50dp"
        android:background="#B3303030" >

        <LinearLayout
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <LinearLayout
                android:id="@+id/email_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/line_border"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/email_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/email_btn" />

                <TextView
                    android:id="@+id/email_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homepage_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/line_border"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/homepage_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/homepage_btn" />

                <TextView
                    android:id="@+id/homepage_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_page"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_below="@+id/LinearLayout03"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:background="#2d2d2d"/>

</RelativeLayout>